<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradent_splash_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:paddingLeft="@dimen/margin_left"
        android:paddingRight="@dimen/margin_right"
        android:paddingEnd="@dimen/margin_right"
        android:paddingStart="@dimen/margin_left"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/ic_build_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextView.Bold"
            android:textSize="20sp"
            android:text="@string/temporary_maintenance"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/TextView"
            android:gravity="center"
            android:textSize="18sp"
            android:text="@string/txt_under_maintenance"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRetry"
            style="@style/My_Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="30dp"
            android:text="@string/retry" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextView.Bold"
            android:layout_marginTop="26dp"
            android:textSize="16sp"
            android:text="@string/what_happened"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/TextView"
            android:gravity="center"
            android:text="@string/txt_description_maintenance"/>

    </LinearLayout>

</RelativeLayout>