<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/white_broder"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_1"
                    style="@style/KeyBoardTextView" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/tv_4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_4"
                    style="@style/KeyBoardTextView"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/tv_7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_7"
                    style="@style/KeyBoardTextView"
                    android:clickable="true"
                    android:background="?selectableItemBackground"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    style="@style/TextView" />

            </LinearLayout>


            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_2"
                    style="@style/KeyBoardTextView"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/tv_5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_5"
                    style="@style/KeyBoardTextView" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/tv_8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_8"
                    style="@style/KeyBoardTextView" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/tv_0"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/_0"
                    style="@style/KeyBoardTextView" />

            </LinearLayout>


            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_3"
                    style="@style/KeyBoardTextView"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/_3" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/tv_6"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/_6"
                    style="@style/KeyBoardTextView" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <TextView
                    android:id="@+id/tv_9"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    style="@style/KeyBoardTextView"
                    android:gravity="center"
                    android:text="@string/_9" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_delete"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/delete_icon_keyboard" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
